# pneumatic.email

./: .editorconfig  .gitmodules  .prettierrc.json  Cargo.toml  README.md  deno.json  package.json  tsconfig.json
pneumatic-app/: deno.json  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
pneumatic-app/src/: App.tsx  index.css  index.tsx  layout.tsx  sidebar.tsx
pneumatic-app/src/components/: Link.tsx
pneumatic-app/src/layouts/: LayoutDefault.tsx  style.css  tailwind.css
pneumatic-app/src/lib/: utils.ts
pneumatic-app/src/pages/: +Head.tsx  +config.ts
pneumatic-app/src/pages/_error/: +Page.tsx
pneumatic-app/src/pages/index/: +Page.tsx  Counter.tsx
pneumatic-app/src/pages/settings/: +Page.tsx
pneumatic-app/src/pages/settings/accounts/: +Page.tsx
pneumatic-app/src/pages/settings/appearance/: +Page.tsx
pneumatic-app/src/pages/settings/security/: +Page.tsx
pneumatic-app/src/ui/: button.tsx  icons.tsx  popover.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  text-field.tsx  textfield.tsx  tooltip.tsx
pneumatic-data/: Cargo.toml  README.md
pneumatic-data/migrations/: 20250919015408_initial.sql
pneumatic-data/src/: account.rs  contact.rs  db.rs  lib.rs  oauth2_challenge.rs
pneumatic-jmap/: Cargo.toml  README.md
pneumatic-jmap/src/: account.rs  oauth.rs
pneumatic-tauri/: Cargo.toml  tauri.conf.json
pneumatic-tauri/capabilities/: default.json
pneumatic-tauri/migrations/: 20250222015408_initial.sql
pneumatic-tauri/src/: lib.rs  main.rs  oauth.rs  settings.rs  state.rs
pneumatic-tauri/src/cmd/: mod.rs
pneumatic-tauri/src/macos/: traffic_light.rs
