[package]
name = "pneumatic-data"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1.0.96", features = ["backtrace"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.15.1", features = ["v4", "v7", "serde", "fast-rng", "macro-diagnostics"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }

[target.wasm32-unknown-unknown.dependencies]
uuid = { version = "1.15.1", features = ["js", "v4", "v7", "serde", "fast-rng", "macro-diagnostics"]}
