[package]
name = "pneumatic-jmap"
version = "0.1.0"
edition = "2024"

[dependencies]
jmap-client = { path = "../jmap-client", features = ["async", "tokio", "websockets"] }
reqwest = { version = "0.12.12", features = ["json"] }
uuid = { version = "1.14.0", features = ["v4", "v7", "serde", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4.39", features = ["serde"] }
anyhow = "1.0.99"
oauth2 = "5.0.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"
# hickory-client = "0.25.2"
hickory-client = { version = "0.24.4", features = ["dns-over-https", "dns-over-https-rustls", "dnssec"] }
tokio = { version = "1.47.1", features = ["full"] }
