[package]
name = "pneumatic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pneumatic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pneumatic-data = { path = "../pneumatic-data" }
pneumatic-jmap = { path = "../pneumatic-jmap" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
objc = "0.2.7"
tracing = "0.1.41"
tracing-tree = "0.4.0"
tracing-subscriber = "0.3.20"
url = "2.5.7"
anyhow = "1.0.99"
anyhow-tauri = "1.0.0"
uuid = { version = "1.18.1", features = ["js", "v4", "v7", "serde", "fast-rng", "macro-diagnostics"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
rand = "0.8"
